[project]
name = "awesome-media"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ali Tavallaie", email = "a.tavallaie@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jinja2>=3.1.6",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
]

[project.scripts]
awesome-media = "awesome_media:main"

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
